Update README and implement screenshot export/auto-shutdown

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Text Differ</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <!-- jsdiff is now loaded in the worker, but we keep it here for fallback or if needed by other scripts -->
     <!-- Actually, app.js doesn't use Diff directly anymore, but the worker does. -->
